[package]
name = "ghregistry"
version = "0.1.0"
authors = ["Milan Šťastný <milan@acheta.games>"]
description = "A pure-Rust synchronous library for Github Docker Registry API"
repository = "https://github.com/AchetaGames/ghregistry"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
http = "0.2"
libflate = "1.0"
log = "0.4"
mime = "0.3"
regex = "^1.1.0"
reqwest = { version = "0.11", features = ["json", "cookies", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_ignored = "0.1"
serde_json = "1"
sha2 = "^0.9.0"
strum = "0.22"
strum_macros = "0.22"
tar = "0.4"
thiserror = "1.0.19"
url = "2.1.1"

